Tue Aug  1 19:05:41 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Testsuite displays addresses in hex.

Tue Aug  1 19:00:56 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added ar-wrapper-solaris to the distribution.

Tue Aug  1 18:16:04 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Hacked libtool (actually ltconfig) to support building under
	  Solaris CC.  Also added an ar wrapper for the same reason.

Tue Aug  1 17:37:57 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Changed even more DebugMsgs with endls into DEBUGLINEs: now
	  compiles library.

	* Disable support for adding endl() and flush() to a om_ostringstream.
	  This was very hackily done, and broke with different compilers or
	  STL port.

	* Fix typo in RJB_FIND_STLPORT macro, so that the correct path is
	  given for finding the library.

Tue Aug  1 17:12:03 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Changed more DebugMsgs with endls into DEBUGLINEs: backends now
	  finished.

Tue Aug  1 17:07:10 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add explicit std:: to things in sleepycat backend, so that it will
	  compile with stricter compilers.  Convert some DebugMsgs with endls
	  into DEBUGLINEs.

Tue Aug  1 16:08:04 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* stemtest and delve now compile under Solaris CC.

Tue Aug  1 15:41:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add autoconf support for compiling with STLport.

Tue Aug  1 15:39:50 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change C++ style comments in acconfig.h into C style comments.

Mon Jul 31 19:05:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Updates to the Perl and Python test scripts, and an extra
	  Makefile dependency.

Mon Jul 31 15:41:37 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixes and updates to the SWIG bindings.  Perl5 has done its